Fix responsive issue and improved readability for mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -28,13 +28,25 @@ article h2 {
     padding: 0;
 }
 
-p, blockquote{
+p, blockquote {
     font-family: 'Montserrat';
     max-width: 600px;
     font-size: 19px;
     line-height: 1.8;
-    font-weight: 200;
-    text-align: left;
+    text-align: justify;
+}
+
+@media (max-width: 620px) {
+    p {
+        line-height: 1.5;
+        text-align: justify;
+    }
+}
+
+@media (max-width: 620px) {
+    main div {
+        padding: 20px;
+    }
 }
 
 p:nth-last-child(1) {
@@ -69,10 +81,11 @@ main {
 }
 
 @media (max-width: 1000px) {
-    .posts {
+    main {
         grid-template-columns: 1fr;
     }
 }
+
 
 article {
     height: 500px;
@@ -141,11 +154,12 @@ blockquote {
 }
 
 img {
-    width: 1000px;
+    max-width: 100%;
+    height: auto;
     margin: 40px 0;
 }
 
 .small_img {
-    width: 600px;
+    max-width: 600px;
     margin: 40px 0;
 }
